; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge.c_write_tree_trivial.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge.c_write_tree_trivial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"git write-tree failed to write a tree\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object_id*)* @write_tree_trivial to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_tree_trivial(%struct.object_id* %0) #0 {
  %2 = alloca %struct.object_id*, align 8
  store %struct.object_id* %0, %struct.object_id** %2, align 8
  %3 = load %struct.object_id*, %struct.object_id** %2, align 8
  %4 = call i64 @write_cache_as_tree(%struct.object_id* %3, i32 0, i32* null)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = call i32 @_(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @die(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i64 @write_cache_as_tree(%struct.object_id*, i32, i32*) #1

declare dso_local i32 @die(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
